src/z80asm/z80asm2/t/40-syntax/expected/dword_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/dword_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/dword_01.asm...
t/40-syntax/input/dword_01.asm:1:6: error: Expression expected
    dword
         ^
t/40-syntax/input/dword_01.asm:2:1: error: Unterminated expression after "dword"
    dword ,
    ^
t/40-syntax/input/dword_01.asm:4:19: error: Expression expected
    dword 1,2,3,1+2*3,
                      ^
t/40-syntax/input/dword_01.asm:5:19: error: Unexpected token: "@"
    dword 1,2,3,1+2*3 @
                      ^
Program
    OpcodeStmt
        Location: t/40-syntax/input/dword_01.asm:3:1
        Address: 0
        Bytes: 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
        Patches:
            Patch
                Location: t/40-syntax/input/dword_01.asm:3:1
                Value type: Unknown
                Tokens: 
                Offset: 0, Size: 4
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 1
                        Location: t/40-syntax/input/dword_01.asm:3:7
                        Value type: Unknown
                        Tokens: 1
            Patch
                Location: t/40-syntax/input/dword_01.asm:3:1
                Value type: Unknown
                Tokens: 
                Offset: 4, Size: 4
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 2
                        Location: t/40-syntax/input/dword_01.asm:3:9
                        Value type: Unknown
                        Tokens: 2
            Patch
                Location: t/40-syntax/input/dword_01.asm:3:1
                Value type: Unknown
                Tokens: 
                Offset: 8, Size: 4
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 3
                        Location: t/40-syntax/input/dword_01.asm:3:11
                        Value type: Unknown
                        Tokens: 3
            Patch
                Location: t/40-syntax/input/dword_01.asm:3:1
                Value type: Unknown
                Tokens: 
                Offset: $0C, Size: 4
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprBinary: +
                        Location: t/40-syntax/input/dword_01.asm:3:15
                        Value type: Unknown
                        Tokens: 1+2*3
                        LHS:
                            ExprLiteralInt: 1
                                Location: t/40-syntax/input/dword_01.asm:3:13
                                Value type: Unknown
                                Tokens: 
                        RHS:
                            ExprBinary: *
                                Location: t/40-syntax/input/dword_01.asm:3:17
                                Value type: Unknown
                                Tokens: 
                                LHS:
                                    ExprLiteralInt: 2
                                        Location: t/40-syntax/input/dword_01.asm:3:15
                                        Value type: Unknown
                                        Tokens: 
                                RHS:
                                    ExprLiteralInt: 3
                                        Location: t/40-syntax/input/dword_01.asm:3:17
                                        Value type: Unknown
                                        Tokens: 
